hphp/hack/test/typecheck/reactive/mutability_flavors4.php
<?hh // partial

class A {}

<<__Rx>>
function f(): void {
  $a = 1;
  // ERROR
  $a = \HH\Rx\mutable(new A());
}
